--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-redux-toastr": "^7.6.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-form": "^8.2.3",
+    "@types/redux-persist": "^4.3.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "redux-persist": "^6.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
