--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-form": "^8.2.3",
     "@types/redux-persist": "^4.3.1",
+    "@types/redux-thunk": "^2.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
