--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@types/redux-form": "^8.2.3",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.2",
     "predicthq": "^0.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1",
     "redux-persist": "^6.0.0",
     "typescript": "~3.7.2"
   },
