--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-redux-toastr": "^7.6.0",
@@ -25,11 +26,13 @@
     "eslint-plugin-prettier": "^3.1.2",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.1",
     "redux-persist": "^6.0.0",
     "typescript": "~3.7.2"
