--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-redux-toastr": "^7.6.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.4.2",
     "@types/redux-form": "^8.2.3",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
