--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "moment": "^2.24.0",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
