--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "tslint": "^6.1.0",
