--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
