--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.2",
     "history": "^4.10.1",
+    "jquery": "^3.5.0",
     "moment": "^2.24.0",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
