--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "history": "^4.10.1",
     "jquery": "^3.5.0",
+    "millify": "^3.1.3",
     "moment": "^2.24.0",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
