--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/redux-form": "^8.2.3",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^3.1.2",
@@ -36,13 +37,16 @@
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "react-redux-toastr": "^7.6.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-use-location-state": "^2.3.1",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.1",
+    "redux-form": "^8.3.5",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
     "use-location-state": "^2.3.1"
   },
