--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/react": "^4.4.0",
+    "@google/markerclustererplus": "^5.0.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -32,12 +33,14 @@
     "jquery": "^3.5.0",
     "millify": "^3.1.3",
     "moment": "^2.24.0",
+    "points-cluster": "^0.1.4",
     "predicthq": "^0.2.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.2.0",
     "react-redux-toastr": "^7.6.4",
     "react-router": "^5.1.2",
@@ -46,6 +49,7 @@
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.1",
+    "recompose": "^0.30.0",
     "redux-form": "^8.3.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
